# dbt_pca

./: .gitignore  404.html  CHANGELOG.md  README.md  dbt_project.yml  index.html  pyproject.toml  run  scripts.py  sitemap.xml
.github/workflows/: docs.yml  tests.yml
clickhouse/: users.xml
docs/: mkdocs.yml
docs/src/: index.md
integration_tests/: dbt_project.yml  package-lock.yml  selectors.yml
integration_tests/models/: _collinear_matrix_long.sql  collinear_matrix_long_input.sql  collinear_matrix_long_input_loadings_wide_output.sql  collinear_matrix_long_input_referencing_cte.sql  collinear_matrix_two_pca_calls.sql  collinear_matrix_wide_input.sql  collinear_matrix_wide_input_coefficients_wide_transposed_output.sql  collinear_matrix_wide_input_eigenvectors_wide_transposed_output.sql  collinear_matrix_wide_input_factors_output.sql  collinear_matrix_wide_input_ncomp_3.sql  collinear_matrix_wide_input_ncomp_3_factors_output.sql  collinear_matrix_wide_input_ncomp_3_factors_wide_output.sql  collinear_matrix_wide_input_ncomp_3_no_demean_factors_output.sql  collinear_matrix_wide_input_ncomp_3_no_demean_projections_output.sql  collinear_matrix_wide_input_ncomp_3_no_standardize_factors_output.sql  collinear_matrix_wide_input_ncomp_3_no_standardize_projections_output.sql  collinear_matrix_wide_input_ncomp_3_projections_output.sql  collinear_matrix_wide_input_ncomp_3_projections_untransformed_wide_output.sql  collinear_matrix_wide_input_ncomp_3_projections_wide_output.sql  collinear_matrix_wide_input_ncomp_3_with_weights_projections_output.sql  (+6 more)
macros/: schema.yml
(+36 files in other folders)
