[project]
name = "dbt_pca"
requires-python = "~=3.11"
description = "dbt_pca dbt package"
version = "0.0.5"
readme = "README.md"
authors = [{ name = "Daniel Reeves", email = "xdanielreeves@gmail.com" }]

[project.optional-dependencies]
python-dev = [
    "pandas>=2.2.3",
    "numpy>=2.2.1",
    "pre-commit>=4.0.1",
    "pyyaml>=6.0.2",
    "rich-click>=1.8.5",
    "ruff>=0.8.4",
    "statsmodels>=0.14.4",
    "tabulate>=0.9.0",
]
clickhouse = [
    "dbt-core",
    "dbt-clickhouse",
]
duckdb = [
    "dbt-core",
    "dbt-duckdb",
    "duckdb>=1.1.3",
]
# Postgres currently not supported
postgres = [
    "dbt-core",
    "dbt-postgres",
]
snowflake = [
    "dbt-core",
    "dbt-snowflake",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I001"]

[tool.ruff.lint.isort]
lines-after-imports = 2
force-single-line = true
